Fix footer overlapping upload item options menu

--- a/src/app/views/cp/overview/styles.scss
+++ b/src/app/views/cp/overview/styles.scss
@@ -6,7 +6,7 @@
 
         padding: 0 calc(var(--base-pm) * 2);
 
-        @media(max-width: 400px) { padding: 0;  }
+        @media(max-width: 420px) { padding: 0; }
     }
 
     .sidebar {
